# scalas

./: .gitignore  Cargo.toml  flake.nix
examples/: hello.scala
src/: args.rs  builtins.rs  compiler.rs  error.rs  main.rs  parser.rs  tokenizer.rs
