[package]
name = "scalas"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
chumsky = "0.10.1"
clap = { version = "4.5.37", features = ["derive"] }
convert_case = "0.8.0"
derive_more = { version = "2.0.1", features = ["deref", "display"] }
indexmap = "2.9.0"
quote = "1.0.40"
syn = "2.0.100"
